feat: tx schemas
